--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
-contourpy==1.3.3
-cycler==0.12.1
-fonttools==4.59.2
-kiwisolver==1.4.9
-matplotlib==3.10.6
-numpy==2.3.2
-packaging==25.0
-pillow==11.3.0
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
-qrcode==8.2
-scipy==1.16.1
-six==1.17.0
-svgpathtools==1.7.1
-svgwrite==1.4.3
+blinker==1.9.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
+Flask==3.1.2
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+python-dotenv==1.1.1
+requests==2.32.5
+urllib3==2.5.0
+Werkzeug==3.1.3
